update logo and dark mode fixes

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -34,7 +34,7 @@ p {
 
 }
 
-:root {
+[data-md-color-scheme="light"] {
     --md-primary-fg-color:        #001633;
     --md-primary-fg-color--light: #001633;
     --md-primary-fg-color--dark:  #001633;
@@ -42,4 +42,16 @@ p {
     --md-accent-fg-color--light: #f79939;
     --md-accent-fg-color--dark:  #f79939;
     --md-primary-bg-color:       #f79939;
+    --md-typeset-a-color:        #f79939;
+  }
+
+  [data-md-color-scheme="slate"] {
+    --md-primary-fg-color:        #001633;
+    --md-primary-fg-color--light: #001633;
+    --md-primary-fg-color--dark:  #001633;
+    --md-accent-fg-color:        #f79939;
+    --md-accent-fg-color--light: #f79939;
+    --md-accent-fg-color--dark:  #f79939;
+    --md-primary-bg-color:       #f79939;
+    --md-typeset-a-color:        #f79939;
   }
